--- a/interface/src/app.css
+++ b/interface/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blink {
+    animation: blink 0.33s linear infinite;
+  }
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
